--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Lab 01</title>
 </head>
 <body>
@@ -22,5 +23,6 @@
    Added paragraphs (`p`).<br>
    Styled text using <strong>bold</strong> and <em>italic</em>.<br>
 </p>
+<code>thats Tanvir Tonoy</code>
 </body>
 </html>
