--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
    Added paragraphs (`p`).<br>
    Styled text using <strong>bold</strong> and <em>italic</em>.<br>
 </p>
-<code>thats Tanvir Tonoy</code>
+<code>@Tanvir Tonoy</code>
 </body>
 </html>
